# PforP

./: ColorUI.epgz  README.md  VolNameDump.txt  for_fun.py  kmeans.py  pforp.db  propaganda.db  volumes.csv
Finished/Volume2/: .directory
Finished/Volume5/: .directory
Finished/Volume9/: .directory
Propaganda-JPEGs/Vol1/: how-it-works.xcf
Thumbs_Gauss/Volume10/: .directory
Thumbs_Gauss/Volume4/: .directory
Thumbs_Gauss/Volume7/: .directory
Thumbs_Gauss/Volume8/: .directory
analysis/: kmeans.py  the meat.txt
build-processing-Desktop-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ecm_uninstall.cmake  gaussian  gaussian.cbp
build-processing-Desktop-Debug/gaussian_autogen/: moc_predefs.h
build-processing-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake  ecm_uninstall.cmake  gaussian  gaussian.cbp
build-processing-Desktop-Default/gaussian_autogen/: moc_predefs.h
db_insert/: CMakeLists.txt  db_insert.cpp
processing/: .directory  CMakeLists.txt  CMakeLists.txt.user.a27f636  gaussian.cpp  gaussian.py
processing/build-getdominant-Qt_5_11_0_qt5-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  db_insert  ecm_uninstall.cmake  getdominant
processing/getdominant/: CMakeLists.txt  getdominant.cpp
thumbs/Volume14/: .directory
thumbs/Volume3/: .directory
volumesort/: volsort.py
volumesort/Propaganda-indices/: aha  anomalies.txt  archive.sh  index.html  maybe  mkall.sh  mkbrowse  mkbrowse-ira.pl  mktars.sh  prob
(+2122 files in other folders)
